# pi-sdk-python

./: .env.example  .gitignore  README.md  pyproject.toml  test_llm_fix.py  test_sdk.py  test_skills.py
example_skills/exa/: README.md  SKILL.md  exa_cli.py
examples/: coding_agent.py  simple_chat.py
examples/mafia_game/: CLAUDE.md  RULES.md  agent_factory.py  game_state.py  main.py  meeting.py  orchestrator.py  prompts.py  tmux_utils.py
examples/mafia_game/roles/: __init__.py  detective.py  doctor.py  guardian.py  mafia.py  villager.py
pi_sdk/: __init__.py  agent.py  agent_types.py  llm_client.py  skills.py  types.py
pi_sdk/tools/: __init__.py  base.py  bash.py  edit.py  edit_diff.py  path_utils.py  read.py  truncate.py  write.py
pollard_rho/: README.md  pollard_rho  pollard_rho.c
