[project]
name = "pi-sdk-python"
version = "0.1.0"
description = "Minimal Python Agent SDK for building LLM-powered tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.81",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pi_sdk"]
